--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,6 +40,8 @@ on:
         description: "Deny warnings"
         default: false
         type: boolean
+  push:
+    branches: [main]
 
 # Cancel the release workflow when a more recent workflow begins.
 concurrency:
@@ -90,9 +92,11 @@ env:
   # <https://docs.github.com/en/repositories/working-with-files/managing-large-files/about-storage-and-bandwidth-usage>
   git_lfs: false
 
-  # Enabling this only helps with consecutive releases to the same version (and takes up cache storage space).
-  # See: <https://github.com/orgs/community/discussions/27059>.
-  use_github_cache: false
+  # Enable these to deploy on every push to `main`.
+  # Make sure to set up any enabled targets. Builds will ignore warnings.
+  # Warning: If you use private repositories, this will eat through your available worker minutes quickly.
+  continuous_deployment_to_itch: true
+  continuous_deployment_to_github_pages: false
 
 jobs:
   # Forward some environment variables as outputs of this job.
@@ -105,21 +109,30 @@ jobs:
         run: "true"
     outputs:
       itch_page: ${{ env.itch_page }}
+      continuous_deployment_to_itch: ${{ env.continuous_deployment_to_itch }}
+      continuous_deployment_to_github_pages: ${{ env.continuous_deployment_to_github_pages }}
 
   # Determine the version number for this workflow.
   get-version:
     runs-on: ubuntu-latest
-    steps:
-      - name: Determine version number
-        id: tag
-        run: echo "ref=${GITHUB_REF#refs/*/}" >> "${GITHUB_OUTPUT}"
     outputs:
-      # Use the input from workflow dispatch, or fall back to the git ref.
-      version: ${{ inputs.version || steps.ref.outputs.ref }}
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Determine version number
+        id: version
+        # Use the input from workflow dispatch, or fall back to the Cargo.toml version
+        run: |
+          if [ -n '${{ inputs.version }}' ]; then
+            echo "version=${{ inputs.version }}" >> "${GITHUB_OUTPUT}"
+          else
+            echo "version=$(cargo pkgid | sed 's/.*#//')" >> "${GITHUB_OUTPUT}"
+          fi
 
   # Build and package a release for each platform.
   build:
     needs:
+      - forward-env
       - get-version
     env:
       version: ${{ needs.get-version.outputs.version }}
@@ -196,7 +209,7 @@ jobs:
 
           # Check if building for this platform is enabled.
           echo 'is_platform_enabled=${{
-            (matrix.platform == 'web' && inputs.build_for_web) ||
+            (matrix.platform == 'web' && (inputs.build_for_web || (github.event_name == 'push' && (env.continuous_deployment_to_itch == 'true' || env.continuous_deployment_to_github_pages == 'true')))) ||
             (matrix.platform == 'linux' && inputs.build_for_linux) ||
             (matrix.platform == 'windows' && inputs.build_for_windows) ||
             (matrix.platform == 'macos' && inputs.build_for_macos)
@@ -215,7 +228,7 @@ jobs:
           targets: ${{ matrix.targets }}
 
       - name: Restore Rust cache
-        if: ${{ env.is_platform_enabled == 'true' && env.use_github_cache == 'true' }}
+        if: ${{ env.is_platform_enabled == 'true' && github.event_name == 'push' }}
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: release
@@ -326,7 +339,7 @@ jobs:
           retention-days: 1
 
       - name: Upload web bundle to workflow artifacts for GitHub Pages (Web)
-        if: ${{ env.is_platform_enabled == 'true' && matrix.platform == 'web' && inputs.deploy_to_github_pages }}
+        if: ${{ env.is_platform_enabled == 'true' && matrix.platform == 'web' && (inputs.deploy_to_github_pages == 'true' || (github.event_name == 'push' && needs.forward-env.outputs.continuous_deployment_to_github_pages == 'true')) }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: ${{ env.app }}/${{ env.cargo_build_binary_name }}
@@ -345,12 +358,8 @@ jobs:
   # Deploy to itch.io.
   deploy-to-itch:
     runs-on: ubuntu-latest
-    needs:
-      - forward-env
-      - get-version
-      - build
-    if: ${{ inputs.deploy_to_itch && needs.forward-env.outputs.itch_page != '' }}
-
+    needs: build
+    if: ${{ (inputs.deploy_to_itch || (github.event_name == 'push' && needs.forward-env.outputs.continuous_deployment_to_itch == 'true')) && needs.forward-env.outputs.itch_page != '' }}
     steps:
       - name: Download packages
         uses: actions/download-artifact@v4
@@ -390,7 +399,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.page_url }}
-    if: ${{ inputs.deploy_to_github_pages && inputs.build_for_web }}
+    if: ${{ (inputs.deploy_to_github_pages && inputs.build_for_web) || (github.event_name == 'push' && needs.forward-env.outputs.continuous_deployment_to_github_pages == 'true') }}
 
     steps:
       - name: Deploy to GitHub Pages
