--- a/Cargo.toml.template
+++ b/Cargo.toml.template
@@ -5,7 +5,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.18" }
+# Use only features needed for a 2D game to improve compile time and size
+bevy = { version = "0.18", default-features = false, features = ["2d"] }
 rand = "0.9"
 # Compile out low-severity logs to improve performance.
 # Remove these features if you want to profile your game with tracy.
